# mokutan

./: README.md  TODO.md  pyproject.toml
mangaread2/: __init__.py  __main__.py  app.py  difficulty.py  io.py  ocr.py  utils.py
mangaread2/style/: files.css  general.css  images.css  main.css  ocr-popup.css  scrollbar.css
mangaread2/templates/: actions.html.jinja  anki-popup.html.jinja  drives.html.jinja  file.html.jinja  image.html.jinja  index.html.jinja  jobs.html.jinja  nav.html.jinja  non-image.html.jinja  ocr-popup.html.jinja
mokutan/: __init__.py  app.py  difficulty.py  io.py  utils.py
mokutan/style/: anki-popup.css  fonts.css  general.css  images.css  init.css  nav.css  scrollbar.css
mokutan/templates/: anki-popup.html.jinja  drives.html.jinja  file-options.html.jinja  file.html.jinja  image.html.jinja  index.html.jinja  nav.html.jinja
